<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home_title" />
        
        <item
            android:id="@+id/nav_live_graph"
            android:icon="@drawable/ic_timeline"
            android:title="@string/nav_header_title" />
        <item
            android:id="@+id/nav_coordinate_toggle"
            android:icon="@drawable/ic_coordinate_system"
            android:title="@string/coordinate_cartesian" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history_title" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings_title" />
            
            <item
                android:id="@+id/nav_calibrate"
                android:icon="@drawable/ic_calibrate"
                android:title="@string/nav_calibrate_title"/>
        </menu>
    </item>

    <item android:title="@string/premium">
        <menu>
            <item
                android:id="@+id/nav_premium"
                android:icon="@drawable/ic_star"
                android:title="@string/nav_premium_title" />
            
            <item
                android:id="@+id/nav_export"
                android:icon="@drawable/ic_share"
                android:title="@string/nav_export_title" />
        </menu>
    </item>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/nav_help_title" />
            
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/nav_about_title" />
        </menu>
    </item>

</menu>
